# TuxRider

./: .classpath  .gitignore  .project  AndroidManifest.xml  Application.mk  build.gradle  project.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/files/: tux.tcl  tuxracer_init.tcl
app/src/main/assets/files/courses/: course_idx.tcl
app/src/main/assets/files/fonts/: trebuchet.tfm  trebuchet_white.rgb  trebuchet_yel_blk.rgb
app/src/main/assets/files/textures/: checkmark.rgb  gaugeenergymask.rgb  gaugeoutline.rgb  gaugespeedmask.rgb  herringicon.rgb  listbox_arrows.rgb  menu_title.rgb  noicon.rgb  textarea_arrows.rgb  tuxlife.rgb
app/src/main/cpp/: configure-iphone
app/src/main/cpp/android/: AudioManager.c  android.h  androidgl.c  androidgl.h  touchwinsys.c  touchwinsys.h
app/src/main/cpp/macosx/: EAGLView.xib  MainWindow.xib  main.m
app/src/main/cpp/macosx/Classes/: AudioPlayer.m  FlipsideView.h  FlipsideView.m  FlipsideViewController.h  FlipsideViewController.m  RootViewController.h  RootViewController.m  TRAppDelegate.h  TRFriendsManagerDelegate.h  iphoneglu.h  (+2 more)
app/src/main/cpp/src/: audio_data.h  button.h  course_load.h  course_mgr.c  course_mgr.h  course_render.c.orig  fonts.c  fonts.c.orig  game_logic_util.h  game_over.c.orig  game_over.h  game_type_select.c  gl_util.c  gl_util.h  help.c  hier.c  hier.h  hud.c.orig  intro.h  joystick.c  keyboard.h  keyboard_util.h  keyframe.h  lights.h  main.c  mirror_course.h  os_util.h  pic.h  quadgeom.cpp  quadgeom.hpp  quadtree.cpp  quadtree.cpp.orig  quadtree.hpp  race_select.c  race_select.h  racing.c.orig  render_util.c  render_util.h  reset.h  screenshot.c  (+14 more)
app/src/main/jni/: tcl8.6a3.configure
app/src/main/jni/tcl8.6a3/: Android.mk  undefined.c
app/src/main/jni/tuxrider/: AUTHORS  Android.mk  README  bootstrap
(+310 files in other folders)
